Footer and Header Sections: 1. Header fixed blurred transparent background over the svg\png files. Footer: fixed icon sizes and locations.

--- a/css/general.css
+++ b/css/general.css
@@ -86,6 +86,10 @@ button {
     align-items: center;
 }
 
+.footer-grid {
+    grid-template-columns: 30% 60%;
+}
+
 .heading-secondary {
     font-size: 3rem;
     line-height: 1.2;
